--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1 {
 #main {
   width: 600px;
   margin: 0 auto;
-  background-color: white;
+  background-color: #fff;
   padding: 50px;
 }
 ul#navigation {
@@ -50,11 +50,14 @@ ul#navigation li {
 }
 ul#navigation li a {
     display: block;
-    color: white;
+    color: #fff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 ul#navigation li a:hover {
     background-color: #111;
+}
+hr {
+    border-color: inherit;
 }
