--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,18 @@ h1 {
     padding:0;
     margin:0;
 }
+h2 {
+    margin:0;
+    padding:0;
+}
+h4 {
+    margin:0;
+    padding:0;
+    font-size: 80%;
+}
+hr {
+    margin: 30px 0px;
+}
 
 #main {
   width: 600px;
