--- a/spacegame/style/ui_style.css
+++ b/spacegame/style/ui_style.css
@@ -6,6 +6,7 @@
   
 }
 
+
 #ui {
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -13,6 +14,27 @@
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+
+    width: 100%;
+    height: 100%;
+}
+
+#ui #blocker {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+#ui .overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#ui #menu {
+    margin: 0;
+    position: absolute;
 }
 
 #ui button {
