basic building walls and doors

--- a/spacegame/style/ui_style.css
+++ b/spacegame/style/ui_style.css
@@ -54,3 +54,8 @@
 #ui button.active {
     background-color: var(--menu_contrast_color);
 }
+
+#ui .highlight {
+    opacity: 0.3;
+    fill: yellow;
+}
