--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ h4 {
 }
 hr {
     margin: 30px 0px;
+    clear: both;
+}
+
+img {
+    margin: 20px;
 }
 
 #main {
@@ -69,7 +74,4 @@ ul#navigation li a {
 }
 ul#navigation li a:hover {
     background-color: #111;
-}
-hr {
-    border-color: inherit;
 }
